# sce-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
lib/: apply.rs  common.rs  main.rs  parse.rs  word.rs
src/: main.rs
